# camera-medicart

CameraCtrl/: .qmake.stash  CameraCtrl.pro  CameraCtrl.pro.user.2fbdb84  CameraGUI.rc  Makefile  Makefile.Debug  Makefile.Release  image.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myqcombobox.h  rockerhandle.cpp  rockerhandle.h  winleft.cpp  winleft.h  winleft.ui  winright.cpp  winright.h  winright.ui  winsetting.cpp  winsetting.h  winsetting.ui
CameraCtrl/include/: CameraCtrl.h
Cameralib/: .qmake.stash  BaseCom.h  CameraCtrl.cpp  CameraCtrl.pro  CameraCtrl.pro.user.2fbdb84  CameraCtrl_global.h  Makefile  Makefile.Debug  Makefile.Release  USBDevice.cpp  USBDevice.h
Cameralib/release/: CameraCtrl.exp
camera_control_test/: BUILD_INSTRUCTIONS.txt  CMakeLists.txt  CameraControlTest.sln  CameraControlTest.vcxproj  MINGW_FIX.txt  MINGW_LINKING_FIX.txt  Makefile  QUICKSTART.md  QUICKSTART_VS.txt  README.md  WINDOWS7_SETUP.txt  build.bat  build_mingw_with_a.bat  compile_simple.bat  create_mingw_lib.bat  main.cpp
